[tool.poetry]
name = "cs156"
version = "0.1.0"
description = "sync group project environments"
authors = ["poke8014 <theluc04@yahoo.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.5"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
